# deep-learning-from-scratch-2

./: .gitignore  pyproject.toml  setup.cfg
ch01/: forward_net.py  show_spiral_dataset.py  train.py  train_custom_loop.py  two_layer_net.py
ch02/: count_method_big.py  most_similar.py  ppmi.py  show_ptb.py  similarity.py
ch03/: cbow_predict.py  simple_cbow.py  simple_skip_gram.py  train.py
ch04/: cbow.py  negative_sampling_layer.py  skip_gram.py  train.py
ch05/: simple_rnnlm.py  train.py  train_custom_loop.py
ch06/: better_rnnlm.py  clip_grads.py  eval.py  rnn_gradient_graph.py  rnnlm.py  train_better_rnnlm.py
ch07/: generate_better_text.py  generate_text.py  peeky_seq2seq.py  rnnlm_gen.py  seq2seq.py  show_addition_dataset.py  train_seq2seq.py
ch08/: attention_layer.py  attention_seq2seq.py  train.py  visualize_attention.py
common/: base_model.py  layers.py  optimizer.py  time_layers.py  trainer.py  util.py
dataset/: ptb.py  sequence.py  spiral.py
