[tool.poetry]
name = "deep-learning-from-scratch-2"
version = "0.1.0"
description = ""
authors = ["false <false@wizard-limit.net>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "<1.19"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
